introduced e2e tests to userController, with h2 database
