# src/main/java/com/example/processmanagementtool/controller/UserController.java
@@ -2,7 +2,8 @@ package com.example.processmanagementtool.controller;
 
 import com.example.processmanagementtool.api.v1.UserApi;
 import com.example.processmanagementtool.dto.SuccessResponseDTO;
-import com.example.processmanagementtool.dto.UserDTO;
+import com.example.processmanagementtool.dto.UserRequestDTO;
+import com.example.processmanagementtool.dto.UserResponseDTO;
 import com.example.processmanagementtool.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -13,40 +14,35 @@ import reactor.core.publisher.Mono;
 
 @RestController
 @RequiredArgsConstructor
-public class TestController implements UserApi {
+public class UserController implements UserApi {
 
     private final UserService userService;
 
     @Override
-    public Mono<ResponseEntity<SuccessResponseDTO>> createUser(Mono<UserDTO> userDTO, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<SuccessResponseDTO>> createUser(Mono<UserRequestDTO> userDTO, ServerWebExchange exchange) {
         return userService.saveUser(userDTO)
                 .map(ResponseEntity::ok);
     }
 
     @Override
-    public Mono<ResponseEntity<SuccessResponseDTO>> deleteUser(Integer id, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<SuccessResponseDTO>> deleteUser(Long id, ServerWebExchange exchange) {
         return userService.deleteUser(id)
                 .map(ResponseEntity::ok);
     }
 
     @Override
-    public Mono<ResponseEntity<Flux<UserDTO>>> getAllUser(ServerWebExchange exchange) {
+    public Mono<ResponseEntity<Flux<UserResponseDTO>>> getAllUser(ServerWebExchange exchange) {
         return Mono.just(ResponseEntity.ok(userService.getALlUsers()));
     }
 
     @Override
-    public Mono<ResponseEntity<Flux<UserDTO>>> getAllUserWithinAgeRange(Integer minAge, Integer maxAge, ServerWebExchange exchange) {
-        return Mono.just(ResponseEntity.ok(userService.getAllUsersWithinAgeRange(minAge, maxAge)));
-    }
-
-    @Override
-    public Mono<ResponseEntity<UserDTO>> getOneUser(Integer id, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<UserResponseDTO>> getOneUser(Long id, ServerWebExchange exchange) {
         return userService.getOneUser(id)
                 .map(ResponseEntity::ok);
     }
 
     @Override
-    public Mono<ResponseEntity<SuccessResponseDTO>> updateUser(Integer id, Mono<UserDTO> userDTO, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<SuccessResponseDTO>> updateUser(Long id, Mono<UserRequestDTO> userDTO, ServerWebExchange exchange) {
         return userService.updateUser(id, userDTO)
                 .map(ResponseEntity::ok);
     }
