# src/main/resources/openapi/yaml/automation-openapi.yaml
@@ -49,7 +49,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/UserDTO'
+                  $ref: '#/components/schemas/UserResponseDTO'
         '400':
           description: Bad Request
           content:
@@ -96,7 +96,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserDTO'
+              $ref: '#/components/schemas/UserRequestDTO'
         required: true
       responses:
         '201':
@@ -154,6 +154,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: int64
       responses:
         "500":
           description: Internal Server Error
@@ -190,7 +191,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserDTO'
+                $ref: '#/components/schemas/UserResponseDTO'
     put:
       tags:
         - User
@@ -202,11 +203,12 @@ paths:
           required: true
           schema:
             type: integer
+            format: int64
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserDTO'
+              $ref: '#/components/schemas/UserRequestDTO'
         required: true
       responses:
         "500":
@@ -256,6 +258,7 @@ paths:
           required: true
           schema:
             type: integer
+            format: int64
             description: user id
       responses:
         "500":
@@ -294,68 +297,68 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SuccessResponseDTO'
-  /user/age:
-    get:
-      tags:
-        - User
-      parameters:
-        - in: query
-          name: minAge
-          schema:
-            type: integer
-          description: minimum age of user to filter
-        - in: query
-          name: maxAge
-          schema:
-            type: integer
-          description: maximum age of user to filter
-      summary: Get list of User with age within range
-      operationId: "getAllUserWithinAgeRange"
-      responses:
-        '200':
-          description: return successfully
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UserDTO'
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
-        '401':
-          description: You are not authorized to view the resource
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
-        '403':
-          description: Accessing the resource you were trying to reach is forbidden
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
-        '404':
-          description: The resource you were trying to reach is not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
-        '405':
-          description: Method Not Allowed
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
-        '500':
-          description: 'something went wrong! '
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponseDTO'
+#  /user/age:
+#    get:
+#      tags:
+#        - User
+#      parameters:
+#        - in: query
+#          name: minAge
+#          schema:
+#            type: integer
+#          description: minimum age of user to filter
+#        - in: query
+#          name: maxAge
+#          schema:
+#            type: integer
+#          description: maximum age of user to filter
+#      summary: Get list of User with age within range
+#      operationId: "getAllUserWithinAgeRange"
+#      responses:
+#        '200':
+#          description: return successfully
+#          content:
+#            application/json:
+#              schema:
+#                type: array
+#                items:
+#                  $ref: '#/components/schemas/UserResponseDTO'
+#        '400':
+#          description: Bad Request
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponseDTO'
+#        '401':
+#          description: You are not authorized to view the resource
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponseDTO'
+#        '403':
+#          description: Accessing the resource you were trying to reach is forbidden
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponseDTO'
+#        '404':
+#          description: The resource you were trying to reach is not found
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponseDTO'
+#        '405':
+#          description: Method Not Allowed
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponseDTO'
+#        '500':
+#          description: 'something went wrong! '
+#          content:
+#            application/json:
+#              schema:
+#                $ref: '#/components/schemas/ErrorResponseDTO'
 
 components:
   schemas:
@@ -380,17 +383,23 @@ components:
       properties:
         breed:
           type: string
-    UserDTO:
+    UserRequestDTO:
       type: object
       properties:
-        name:
+        login:
           type: string
         password:
           type: string
-        age:
-          type: integer
+        name:
+          type: string
+    UserResponseDTO:
+      type: object
+      properties:
         id:
           type: integer
+          format: int64
+        name:
+          type: string
 
     ErrorResponseDTO:
       type: object
